# Testovoe

./: .gitignore  CMakeLists.txt  README.md  qml.qrc
qml/: CalendarGrid.qml  CalendarView.qml  MetricChart.qml  MetricDelegate.qml  NoteDelegate.qml  main.qml
src/: calendarmodel.cpp  calendarmodel.h  database.cpp  database.h  main.cpp  metricmodel.cpp  metricmodel.h  notemodel.cpp  notemodel.h
