cmake_minimum_required(VERSION 3.16)

project(test5 VERSION 0.1 LANGUAGES CXX)

set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 REQUIRED COMPONENTS Quick)

set(PROJECT_SOURCES
    src/main.cpp
    src/calendarmodel.cpp
    src/metricmodel.cpp
    src/notemodel.cpp
    src/database.cpp
       )
set(PROJECT_HEADERS
    src/calendarmodel.h
    src/metricmodel.h
    src/notemodel.h
    src/database.h
)

qt_standard_project_setup(REQUIRES 6.8)

qt_add_executable(apptest5
    ${PROJECT_SOURCES}
    ${PROJECT_HEADERS}
)

qt_add_qml_module(apptest5
    URI test5
    VERSION 1.0
    QML_FILES
   qml/main.qml
    qml/CalendarView.qml
    qml/MetricDelegate.qml
   qml/NoteDelegate.qml

)

# Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
# If you are developing for iOS or macOS you should consider setting an
# explicit, fixed bundle identifier manually though.
set_target_properties(apptest5 PROPERTIES
#    MACOSX_BUNDLE_GUI_IDENTIFIER com.example.apptest5
    MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
    MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
    MACOSX_BUNDLE TRUE
    WIN32_EXECUTABLE TRUE
)

target_link_libraries(apptest5
    PRIVATE Qt6::Quick
)

include(GNUInstallDirs)
install(TARGETS apptest5
    BUNDLE DESTINATION .
    LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
    RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
)
